# lab

./: .ansible-lint  .gitignore  .gitlab-ci.yml  README.md  add_role_as_submodule.sh  get_secret.py
.github/workflows/: ci.yaml
ansible/: Dockerfile  ansible.cfg  requirements.txt  requirements.yml
ansible/inventory/: inventory.yml
ansible/inventory/group_vars/: all.yml
ansible/playbooks/: gluster.yaml  site.yml  vm_template.yml
ansible/playbooks/utils/: backup_restore.yml  copy_keys.yml
ansible/roles/k8up/tasks/: main.yml
applications/chicahgo/: Dockerfile  pyproject.toml
applications/chicahgo/src/: house_service.py  main.py  models.py  nearest.py  processor.py  utils.py
applications/chicahgo/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
applications/fidelity_calendar/: Dockerfile  README.md  app.py  requirements.txt  vests.yaml
applications/formula1/: .flake8  .gitlab-ci.yml  Dockerfile  main.py  pyproject.toml  requirements.txt
applications/formula1/formula1/: demonyms.py  feeds.py  grand_prix.py  matcher.py
applications/geocoder/: .gitlab-ci.yml  docker-compose.yml  generate.py  run.sh  template.yml  values.yml
applications/geocoder/proxy/: generate_polygons.py  package-lock.json  package.json  server.js
applications/greatlakes/: README.md  docker-compose.yml  requirements.txt
applications/greatlakes/airport_locations/: master_flow.py
applications/greatlakes/austin_energy/: master_flow.py
applications/habit/: Dockerfile  README.md  main.py
applications/house_search/: get_grocery_stores.py  import_house.py  requirements.txt
applications/magic-mirror/: install_modules.py  modules.yaml
applications/magic-mirror-home/: .gitlab-ci.yml  Dockerfile  modules.yaml
applications/namada_exporter/: Cargo.toml  Dockerfile
applications/namada_exporter/src/: main.rs
applications/prometheus-prefect-exporter/: main.py  requirements.txt
applications/workflows/: .gitignore  docker-compose.yml
terraform/: .terraform.lock.hcl  gitlab_runner.tf  terraform.tfstate
(+252 files in other folders)
