[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.6",
    "geoalchemy2>=0.16.0",
    "geojson>=3.1.0",
    "homeharvest>=0.4.4",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "sadel>=0.1.0",
    "shapely>=2.0.6",
    "sqlmodel>=0.0.22",
    "greenlet>=3.1.1",
    "numpy>=2.2.0",
    "numpy-financial>=1.0.0",
    "openrouteservice>=2.3.3",
    "overpy>=0.7",
    "googlemaps>=4.10.0",
    "gspread>=6.1.4",
]
