[package]
name = "namada_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus_exporter = "0.8"
namada_sdk = { git = "https://github.com/anoma/namada", tag = "v1.1.1", default-features = false, features = ["std", "async-send", "download-params"] }
tendermint-rpc = { version = "0.40.1", features = ["http-client"] }
color-eyre = "0.6.3"
serde_json = "1.0.137"
tokio = { version = "1.8.2", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
directories = "5.0"
log = "0.4.22"
clap = { version = "4.5.23", features = ["derive", "string"] }
rpassword = "7.3.1"
